[package]
name = "ipld-extract-links"
version = "0.1.0"
authors = [
    "Volker Mische <volker.mische@gmail.com>"
]
repository = "https://github.com/vmx/ipld-extract-links"
edition = "2021"
description = "Extract links from IPLD encoded data"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "encoding"]

[dependencies]
cid = {version = "0.11.0", features = ["serde-codec"] }
serde = "1.0.196"
serde_bytes = "0.11.14"

[dev-dependencies]
serde_ipld_dagjson = "0.1.0"
serde_json = "1.0.113"
